sas-core/main/default/objects/Claim__c/fields/CARE_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CARE_Case_Number__c</fullName>
    <label>CARE Case Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>