sas-core/main/default/objects/Claim__c/fields/Court_Name__c.field-meta.xml
<CustomField>
    <fullName>Court_Name__c</fullName>
    <label>Court Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>