sas-core/main/default/objects/Claim__c/fields/Date_of_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Receipt__c</fullName>
    <label>Date of Receipt</label>
    <type>Date</type>
</CustomField>