sas-core/main/default/objects/Claim__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEB/ADR</fullName>
            </value>
            <value>
                <fullName>National Court Case</fullName>
            </value>
            <value>
                <fullName>European Court Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>