sas-core/main/default/objects/Claim__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <label>Flight Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>