sas-core/main/default/objects/Claim__c/fields/Legal_Firm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Firm representing the customer</description>
    <inlineHelpText>Legal firm if representing the passenger</inlineHelpText>
    <label>Legal Firm</label>
    <referenceTo>Legal_Firm__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>