sas-core/main/default/objects/Claim__c/fields/Major_Event__c.field-meta.xml
<CustomField>
    <fullName>Major_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Major events that relate to different claims</description>
    <inlineHelpText>Major event related to the claim</inlineHelpText>
    <label>Major Event</label>
    <referenceTo>Major_Event__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>