sas-core/main/default/objects/Claim__c/fields/Name_of_Passenger_s__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Passenger_s__c</fullName>
    <description>The name of the passenger(s)</description>
    <inlineHelpText>Name of passenger(s) related to the claim</inlineHelpText>
    <label>Name of Passenger(s)</label>
    <type>TextArea</type>
</CustomField>