sas-core/main/default/objects/Claim__c/fields/Reason_for_Default_Judgement__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Default_Judgement__c</fullName>
    <label>Reason for Default Judgement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>