sas-core/main/default/objects/Claim__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EU261</fullName>
            </value>
            <value>
                <fullName>Downgrading/Denied boarding</fullName>
            </value>
            <value>
                <fullName>Ticket refund, personal injury</fullName>
            </value>
            <value>
                <fullName>Unruly passenger</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>sales information</fullName>
            </value>
            <value>
                <fullName>EuroBonus</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>UM</fullName>
            </value>
            <value>
                <fullName>Travel extras</fullName>
            </value>
            <value>
                <fullName>Care costs</fullName>
            </value>
            <value>
                <fullName>Damages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>